--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ exifcam/PyExifCam/.DS_Store
 exifcam/PyExifCam/build/
 exifcam/PyExifCam/dist/exifcam/
 exifcam/PyExifCam/dist/exifcam.app/
+build
+dist
+exifcam/__pycache__
